# maxbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.sample  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: gh-pages.yml
examples/: ptb_polling.py  sanic_app.py  stories.py
examples/digression-showcase/: bot.yaml  stories.yaml
examples/echo/: bot.yaml  stories.yaml
examples/hello-world/: bot.yaml  stories.yaml
examples/opening-hours/: bot.yaml  stories.yaml
examples/reservation/: bot.yaml  stories.yaml
examples/reservation-basic/: bot.yaml  stories.yaml
examples/restaurant/: bot.yaml  stories.yaml
examples/rpc-showcase/: bot.yaml  stories.yaml
integrations/maxbot_rasa/: pyproject.toml  rasa_duckling_extractor_proxy.py
maxbot/: __init__.py  __main__.py  _download.py  _hooks.py  bot.py  builder.py  context.py  dialog_manager.py  errors.py  jinja_env.py  markdown.py  nlu.py  persistence_manager.py  resolver.py  resources.py  rpc.py  scenarios.py  schemas.py  state_store.py  user_locks.py  webapp.py  xml.py
maxbot/channels/: __init__.py  _manager.py  facebook.py  telegram.py  viber.py  vk.py
maxbot/cli/: __init__.py  _bot.py  _journal.py  _logging.py  _ngrok.py  _rich.py  _yaml_dumper.py  info.py  run.py  stories.py
maxbot/extensions/: __init__.py  _manager.py  babel.py  datetime.py  format.py  jinja_loader.py  rasa.py  rest.py
maxbot/flows/: __init__.py  _base.py  dialog_flow.py  dialog_tree.py  slot_filling.py
maxbot/maxml/: __init__.py  http.py  markup.py  pretty.py  timedelta.py  xml_parser.py
maxbot/stories/: __init__.py  pytest.py
maxbot/user_locks/: __init__.py  asyncio.py  mp.py
tests/: conftest.py  test_builder.py  test_channels.py  test_context.py  test_dialog_manager.py  test_errors.py  test_extensions.py  test_jinja_env.py  test_markdown.py  test_middleware.py  test_nlu.py  test_persistence_manager.py  test_resolver.py  test_resources.py  test_rpc.py  test_scenarios.py  test_schemas.py  test_state_store.py  test_user_locks.py  test_webapp.py  test_xml.py
tests/test_bot/: test_adapters.py  test_autoreload.py  test_basics.py  test_run_polling.py  test_run_webapp.py
tests/test_channels/: test_facebook.py  test_telegram.py  test_viber.py  test_vk.py
tests/test_cli/: conftest.py  test_info.py  test_journal.py  test_ngrok.py  test_resolve_bot.py  test_rich.py  test_run.py  test_run_logging.py  test_stories.py
tests/test_extensions/: test_babel.py  test_datetime.py  test_datetime_now.py  test_format.py  test_jinja_loader.py  test_rasa.py  test_rest.py
tests/test_flows/: test_base.py  test_dialog_flow.py  test_dialog_subtree.py  test_dialog_tree.py  test_journal_dialog_tree.py  test_journal_slot_filling.py  test_journal_state.py  test_slot_filling.py
tests/test_maxml/: test_http.py  test_markup.py  test_pretty.py  test_timedelta.py  (+1 more)
website/: docusaurus.config.js  package.json  sidebars.js
(+51 files in other folders)
