[tool.poetry]
name = "maxbot_rasa"
version = "0.1.0"
description = "Maxbot integration for Rasa"
authors = ["Maxbot team <hello@maxbot.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
rasa = "3.2.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
